# ex_tree_sitter_highlight

./: .gitattributes  .gitignore  LICENSE  README.md  comparison.html  mix.exs
example_output/ex_tree_sitter_highlight/: dark_mode_and_line_toggle.html  elixir_liveview.html  rust.html  tree_sitter_highlight.html
example_output/makeup/: elixir_liveview.html
lib/: tree_sitter_highlight.ex
native/treesitterhighlight/: Cargo.toml  README.md
native/treesitterhighlight/src/: lib.rs
priv/: default.css
test/: ex_tree_sitter_highlight_test.exs
test/fixtures/: example_liveview.ex
