[package]
name = "treesitterhighlight"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "treesitterhighlight"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
tree-sitter = "=0.20.10"
tree-sitter-css = "0.20.0"
tree-sitter-elixir = "0.1.1"
tree-sitter-highlight = "0.20.1"
tree-sitter-html = "0.20.0"
tree-sitter-javascript = "0.20.3"
tree-sitter-rust = "0.20.4"
lazy_static = "1.4.0"
